--- a/CHelper-Core/CMakeLists.txt
+++ b/CHelper-Core/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.21)
-project(CHelperCore LANGUAGES CXX)
+project(CHelper LANGUAGES CXX)
 
 # using c++ 20
 set(CMAKE_CXX_STANDARD 20)
@@ -22,27 +22,35 @@ if (MSVC)
 endif ()
 
 # ThirdParty: fmt
-add_subdirectory(include/fmt)
+add_subdirectory(3rdparty/fmt)
 if (MSVC)
     set_property(TARGET fmt PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 endif ()
 
 # ThirdParty: utf8cpp
-add_subdirectory(include/utfcpp)
+add_subdirectory(3rdparty/utfcpp)
 
 # ThirdParty: xxHash
 set(XXHASH_BUILD_XXHSUM OFF)
 option(BUILD_SHARED_LIBS OFF)
-add_subdirectory(include/xxHash/cmake_unofficial EXCLUDE_FROM_ALL)
+add_subdirectory(3rdparty/xxHash/cmake_unofficial EXCLUDE_FROM_ALL)
 
 # ThirdParty: serialization
-add_subdirectory(include/serialization)
+add_subdirectory(3rdparty/serialization)
 
 # ThirdParty: spdlog
 set(SPDLOG_FMT_EXTERNAL ON)
-add_subdirectory(include/spdlog)
+add_subdirectory(3rdparty/spdlog)
 if (MSVC)
     set_property(TARGET spdlog PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+endif ()
+
+# ThirdParty: GTest
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+add_subdirectory(3rdparty/googletest)
+if (MSVC)
+    set_property(TARGET gtest PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+    set_property(TARGET gtest_main PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 endif ()
 
 # Param Deliver
@@ -52,41 +60,83 @@ else ()
     set(CHelperDebug false)
 endif ()
 set(RESOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../CHelper-Resource)
-configure_file(include/param_deliver/ParamDeliver.h.in ${CMAKE_BINARY_DIR}/include/param_deliver/ParamDeliver.h @ONLY)
+configure_file(ParamDeliver.h.in ${CMAKE_BINARY_DIR}/include/ParamDeliver.h @ONLY)
 
 # Sources
-file(GLOB_RECURSE CHELPER_CORE_SOURCE_H include/chelper/*.h)
 file(GLOB_RECURSE CHELPER_CORE_SOURCE_FILE src/chelper/*.cpp)
 
-# Setup
-function(init_chelper_library target CHELPER_CORE_DIR)
-    target_sources(${target} PRIVATE ${CHELPER_CORE_SOURCE_FILE})
-    target_precompile_headers(${target} PRIVATE ${CHELPER_CORE_DIR}/include/pch/pch.h)
-    target_include_directories(${target} PUBLIC
-            ${CHELPER_CORE_DIR}/include/pch
-            ${CHELPER_CORE_DIR}/include/chelper
-            ${CMAKE_BINARY_DIR}/include/param_deliver
-    )
-    target_link_libraries(${target} PUBLIC fmt::fmt spdlog::spdlog utf8cpp xxHash::xxhash serialization::serialization)
-endfunction()
-
 # CHelper Core
-add_library(CHelperCore STATIC)
-init_chelper_library(CHelperCore ${CMAKE_CURRENT_SOURCE_DIR})
+add_library(CHelperCore STATIC ${CHELPER_CORE_SOURCE_FILE})
+target_precompile_headers(CHelperCore PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/pch.h)
+target_include_directories(CHelperCore PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_BINARY_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/src)
+target_link_libraries(CHelperCore PUBLIC fmt::fmt spdlog::spdlog utf8cpp xxHash::xxhash serialization::serialization)
 if (MSVC)
     set_property(TARGET CHelperCore PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 endif ()
 add_library(CHelper::Core ALIAS CHelperCore)
 
 # CHelper Core (no filesystem)
-add_library(CHelperNoFilesystemCore STATIC)
-init_chelper_library(CHelperNoFilesystemCore ${CMAKE_CURRENT_SOURCE_DIR})
+add_library(CHelperNoFilesystemCore STATIC ${CHELPER_CORE_SOURCE_FILE})
+target_precompile_headers(CHelperNoFilesystemCore PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/pch.h)
+target_include_directories(CHelperNoFilesystemCore PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_BINARY_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/src)
+target_link_libraries(CHelperNoFilesystemCore PUBLIC fmt::fmt spdlog::spdlog utf8cpp xxHash::xxhash serialization::serialization)
 target_compile_definitions(CHelperNoFilesystemCore PUBLIC CHELPER_NO_FILESYSTEM)
 if (MSVC)
     set_property(TARGET CHelperNoFilesystemCore PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 endif ()
 add_library(CHelper::NoFilesystemCore ALIAS CHelperNoFilesystemCore)
 
-# Install
-install(TARGETS CHelperCore DESTINATION lib)
-install(FILES CHELPER_CORE_SOURCE_H DESTINATION include)
+# CHelper Android
+if (NOT MSVC)
+    add_library(CHelperAndroid SHARED src/apps/CHelperAndroid.cpp)
+    target_compile_definitions(CHelperAndroid PUBLIC CHelperAndroid)
+    if (ANDROID)
+        target_link_libraries(CHelperAndroid PUBLIC android log)
+    else ()
+        target_compile_definitions(CHelperAndroid PUBLIC __ANDROID__)
+        target_include_directories(CHelperAndroid PUBLIC include_android)
+    endif ()
+    target_link_libraries(CHelperAndroid PRIVATE CHelper::Core)
+endif ()
+
+# CHelper Resource Generator
+add_executable(CHelperResourceGenerator src/apps/CHelperResourceGenerator.cpp)
+target_link_libraries(CHelperResourceGenerator PRIVATE CHelper::Core)
+if (MSVC)
+    set_property(TARGET CHelperResourceGenerator PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+endif ()
+
+# CHelper Test
+file(GLOB_RECURSE TEST_FILE tests/*.cpp)
+add_executable(CHelperTest ${TEST_FILE})
+target_link_libraries(CHelperTest PRIVATE CHelper::Core GTest::gtest_main)
+if (MSVC)
+    set_property(TARGET CHelperTest PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+endif ()
+
+# Web Application
+add_library(CHelperWeb src/apps/CHelperWeb.cpp)
+if (NOT EMSCRIPTEN)
+    target_include_directories(CHelperWeb PRIVATE 3rdparty/emscripten/system/include)
+endif ()
+target_link_libraries(CHelperWeb PRIVATE CHelper::NoFilesystemCore)
+
+# ThirdParty: Qt6
+find_package(Qt6 QUIET COMPONENTS Core Gui Widgets)
+if (Qt6_FOUND)
+    set(CMAKE_AUTOMOC ON)
+    set(CMAKE_AUTORCC ON)
+    set(CMAKE_AUTOUIC ON)
+
+    # Qt Application
+    add_executable(CHelperQt WIN32
+            src/apps/qt/CHelperQt.h
+            src/apps/qt/CHelperQt.cpp
+            src/apps/qt/chelper.qrc
+            src/apps/qt/chelper.ui
+    )
+    target_link_libraries(CHelperQt PRIVATE CHelper::Core Qt6::Core Qt6::Gui Qt6::Widgets)
+    if (MSVC)
+        set_property(TARGET CHelperQt PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+    endif ()
+endif ()
