--- a/.github/workflows/test-resource.yml
+++ b/.github/workflows/test-resource.yml
@@ -28,7 +28,7 @@ jobs:
             cpp_compiler: clang++
 
     steps:
-      - uses: actions/checkout@v5
+      - uses: actions/checkout@v6
         with:
           submodules: 'recursive'
 
@@ -44,11 +44,11 @@ jobs:
           -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
           -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
           -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-          -S ${{ github.workspace }}
+          -S ${{ github.workspace }}/CHelper-Core
 
-      - name: Build CHelperCmd
-        run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }} --target CHelperCmd
+      - name: Build Resource Generator
+        run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }} --target CHelperResourceGenerator
 
-      - name: Run CHelperCmd
+      - name: Run Resource Generator
         working-directory: ${{ steps.strings.outputs.build-output-dir }}
-        run: ./CHelper-Cmd/CHelperCmd
+        run: ./CHelperResourceGenerator
