--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -27,6 +27,9 @@ jobs:
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
+        with:
+          version: latest
+          cache: true
 
       - name: Set up Node
         uses: actions/setup-node@v5
